--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,85 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".ui.findFines.ActivityFindFines">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/first"
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp">
+        tools:srcCompat="@tools:sample/avatars" />
 
-        <EditText
-            android:id="@+id/et_first"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="first letter"
-            android:lines="1"
-            android:padding="@dimen/_10sdp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/second"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_10sdp">
-
-        <EditText
-            android:id="@+id/et_second"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="second letter"
-            android:lines="1"
-            android:padding="@dimen/_10sdp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/third"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_10sdp">
-
-        <EditText
-            android:id="@+id/et_third"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="third letter"
-            android:lines="1"
-            android:padding="@dimen/_10sdp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:padding="@dimen/_10sdp">
-
-        <EditText
-            android:id="@+id/et_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="numbers"
-            android:lines="1"
-            android:inputType="number"
-            android:padding="@dimen/_10sdp" />
-    </android.support.design.widget.TextInputLayout>
     <Button
-        android:id="@+id/get_fines"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_gravity="center"
+        android:gravity="center"
         android:text="get fines!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button2"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:text="Button" />
-
+        android:text="TextView" />
 </LinearLayout>
